--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "leoxu1.github.io/maps",
+  "homepage": "https://leoxu1.github.io/maps",
   "name": "maps",
   "version": "0.1.0",
   "private": true,
@@ -10,6 +10,8 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.2",
+    "react-simple-maps": "^2.3.0",
+    "react-tooltip": "^4.2.14",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
